template-ingress/0-pat-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong-ingress
