template-ingress/4-HTTPRoute-Gemini.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-ingress
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gemini
  name: gemini
  namespace: app-ingress
  #annotations:
  #  konghq.com/plugins: ai-proxy-gemini
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 1027
  selector:
    app: gemini
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gemini
  name: gemini
  namespace: app-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gemini
  template:
    metadata:
      labels:
        app: gemini
    spec:
      containers:
        - image: kong/go-echo:latest
          name: gemini
          ports:
            - containerPort: 1027 # HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gemini-route
  namespace: app-ingress
  annotations:
    konghq.com/strip-path: 'true'
    #konghq.com/plugins: ai-proxy-gemini
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kong
      namespace: kong-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /gemini/api/v1
          headers:
            - name: x-llm
              type: Exact
              value: gemini4
      backendRefs:
        - name: gemini
          port: 80
